[package]
name = "tester"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
lto = "fat"
panic = "abort"

[build]
rustflags = ["-C", "target-cpu=native"]

[dependencies]
recycle_buf = { path = "../recycler-lib" }
tokio = { version = "1", features = ["full"] }
futures = "0"
